# LearningOS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LearningOS.vcxproj  Makefile  OVMF.fd  README.md  build.sh  format.sh  run.sh  startup.nsh
bootloader/: CMakeLists.txt  file.h  (+2 more)
src/: CMakeLists.txt
src/application/shell/: shell.cpp  shell.hpp
src/bootloader/: CMakeLists.txt  bootloader.c  bootloader.vcxproj  file.h  memory.h  protocol.h  vedio.h
src/bootloader/include/: memory.h
src/bootloader/src/: bootloader.c
src/kernel/: CMakeLists.txt  head.asm  kernel.cpp  kernel.lds  kernel.vcxproj  std.hpp
src/kernel/application/: shell.hpp
src/kernel/application/shell/: shell.cpp
src/kernel/include/: system.hpp
src/kernel/include/handler/: keyboard_event_handler.hpp
src/kernel/include/system/: boot.hpp  interrupt.hpp  io.hpp  media.hpp  memory.hpp
src/kernel/include/system/boot/: boot.hpp
src/kernel/include/system/interrupt/: idt.hpp  interrupt_frame.hpp  irq.hpp  pic.hpp
src/kernel/include/system/io/: keyboard.hpp  port.hpp  screen.hpp  text_mode_screen.hpp
src/kernel/include/system/media/: color.hpp  font.hpp
src/kernel/include/system/memory/: gdt.hpp  memory.hpp
src/kernel/src/: head.asm  kernel.cpp
src/kernel/src/handler/: keyboard_event_handler.cpp
src/kernel/src/std/: atexit.cpp
src/kernel/src/system/boot/: boot.cpp
src/kernel/src/system/interrupt/: idt.cpp  pic.cpp
src/kernel/src/system/io/: keyboard.cpp  port.cpp
src/kernel/src/system/media/: color.cpp  font.cpp
src/kernel/src/system/memory/: gdt.cpp  memory.cpp
src/kernel/std/: atexit.cpp  atexit.hpp  type.hpp
src/kernel/system/: boot.hpp  interrupt.hpp  io.hpp  media.hpp  memory.hpp
src/kernel/system/boot/: Boot.cpp  Boot.hpp  BootInfo.hpp
src/kernel/system/interrupt/: idt.hpp  interrupt_frame.hpp  irq.hpp
src/kernel/system/interrupt/idt/: idt.cpp  idt.hpp  idt_descriptor.hpp  idt_descriptor_type.hpp
src/kernel/system/interrupt/irq/: irq.cpp  irq.hpp
src/kernel/system/interrupt/pic/: pic.cpp  pic.hpp
src/kernel/system/io/: Screen.hpp  TextModeScreen.hpp  keyboard.hpp  pic.hpp  port.hpp  screen.hpp  text_mode_screen.hpp
src/kernel/system/io/keyboard/: Keyboard.cpp  Keyboard.hpp  ScanCode.hpp
src/kernel/system/io/pic/: idt_table.cpp  idt_table_descriptor.hpp  pic.cpp  pic.hpp
src/kernel/system/io/port/: pic.hpp  port.cpp  port.hpp
src/kernel/system/io/screen/: Font.hpp  Screen.cpp  Screen.hpp
src/kernel/system/io/text_mode_screen/: TextModeScreen.cpp  TextModeScreen.hpp
src/kernel/system/media/: Color.hpp  Font.hpp  color.hpp  font.hpp
src/kernel/system/media/color/: Color.cpp  Color.hpp
src/kernel/system/media/font/: Font.cpp  Font.hpp
src/kernel/system/memory/: GlobalMemory.hpp  InitMemory.hpp  Malloc.hpp  Memory.hpp  MemoryDescriptor.hpp  MemoryDescriptorType.hpp  gdt.hpp  global_memory.hpp  malloc.hpp  memory.cpp  memory.hpp  memory_descriptor.hpp  memory_descriptor_type.hpp
src/kernel/system/memory/gdt/: gdt.cpp  gdt.hpp  gdt_descriptor.hpp  gdt_table_descriptor.hpp
src/kernel/system/memory/global_memory/: GlobalMemory.cpp  GlobalMemory.hpp
src/kernel/system/memory/memory_descriptor/: MemoryDescriptor.cpp  MemoryDescriptor.hpp
src/kernel/system/memory/method/: AllocatePages.cpp  AllocatePages.hpp  FreePages.cpp  FreePages.hpp  InitMemory.cpp  InitMemory.hpp
(+161 files in other folders)
